--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,6 +12,11 @@ jobs:
   sast:
     name: Static Application Security Testing (SAST)
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write  # Required for CodeQL
+      
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
