Fix workflow dispatch trigger in GitHub Actions workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,6 +1,7 @@
 name: DevSecOps Pipeline
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -16,7 +17,7 @@ jobs:
       actions: read
       contents: read
       security-events: write  # Required for CodeQL
-      
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
