--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,6 +46,9 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: eslint instllation
+        run: npm install eslint --save-dev
+
       - name: Run Linter
         run: npm run lint # Ensure your project has a "lint" script in package.json
 
