Update package.json to include module type and linting script

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "nodejs-webapp",
   "main": "server.js",
+  "type": "module", // Add this line
   "author": {
     "name": "alagrawa"
   },
