--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "nodejs-webapp",
   "main": "server.js",
-  "type": "module", // Add this line
+  "type": "module",
   "author": {
     "name": "alagrawa"
   },
