--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,6 +30,12 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
 
+      - name: Upload CodeQL SARIF Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: codeql-sarif-report
+          path: .github/codeql/codeql-results.sarif
+
 # #dependency-scanning
 #       - name: Run Dependency Scanning with OWASP Dependency-Check
 #         uses: dependency-check/scan-action@v2
