--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,11 +32,12 @@ jobs:
         with:
           output: .github/codeql/codeql-results.sarif
 
-      - name: Upload CodeQL SARIF Report
-        uses: actions/upload-artifact@v3
+      - name: Upload CodeQL SARIF Results
+        uses: github/codeql-action/upload-sarif@v3
         with:
-          name: codeql-sarif-report
-          path: .github/codeql/codeql-results.sarif
+          sarif_file: .github/codeql/codeql-results.sarif
+
+
 
 
 # #dependency-scanning
