--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,6 +36,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: .github/codeql/codeql-results.sarif
+          category: 'Codeql_report'
 
 
 
