Add OSV Scanner installation and report upload steps to workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -71,3 +71,21 @@ jobs:
         with:
           name: eslint-report
           path: eslint-report.txt
+
+# Trivy for the dependecny scanning
+
+# Dependency Scanning with OSV Scanner
+      - name: Install OSV Scanner
+        run: |
+          curl -sSL https://github.com/google/osv-scanner/releases/latest/download/osv-scanner-linux-amd64 -o /usr/local/bin/osv-scanner
+          chmod +x /usr/local/bin/osv-scanner
+
+      - name: Run OSV Scanner
+        run: |
+          osv-scanner --lockfile=package-lock.json > osv-results.txt || true
+
+      - name: Upload OSV Scanner Report
+        uses: actions/upload-artifact@v2
+        with:
+          name: osv-scanner-report
+          path: osv-results.txt
