Add category to Trivy Docker scan report upload step

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -140,3 +140,4 @@ jobs:
         with:
           name: trivy-docker-scan-report
           path: trivy-docker-scan.txt
+          category: 'Trivy_report'
