--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -100,7 +100,8 @@ jobs:
       - uses: gitleaks/gitleaks-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+          GITLEAKS_CONFIG: .gitleaks.toml
+          exit_code: 0
 
 #Docker build and scanning
 # Docker Build and Scanning with Trivy
