--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -62,13 +62,13 @@ jobs:
       #   run: npm run lint # Ensure your project has a "lint" script in package.json
 
       - name: Run Linter
-        run: npm run lint > eslint-report.txt || true # Save output to a file and prevent failure on lint errors
-
+        run: npx eslint . --ext .js,.jsx,.ts,.tsx --format json -o eslint-report.json || true
+    
       - name: Upload Lint Report
         uses: actions/upload-artifact@v4
         with:
           name: eslint-report
-          path: eslint-report.txt
+          path: eslint-report.json
 
 # Trivy for the dependecny scanning
 
