--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "NODE_OPTIONS=--openssl-legacy-provider node app.js",
     "build": "browserify -r jquery > public/js/bundle.js",
     "cleanup": "mongo express-todo --eval 'db.todos.remove({});'",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "snyk test"
   },
   "dependencies": {
