--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -56,7 +56,8 @@ jobs:
         run: npm install
 
       - name: eslint instllation
-        run: npm install eslint --save-dev
+        run: npm install --save-dev @eslint/eslintrc
+
 
       # - name: Run Linter
       #   run: npm run lint # Ensure your project has a "lint" script in package.json
