--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -71,28 +71,27 @@ jobs:
 
 
 
-# Dependency Scanning with OSV Scanner
-# Step: Install Trivy
-      - name: Install Trivy
-        run: |
-          sudo apt-get install wget gnupg
-          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | gpg --dearmor | sudo tee /usr/share/keyrings/trivy.gpg > /dev/null
-          echo "deb [signed-by=/usr/share/keyrings/trivy.gpg] https://aquasecurity.github.io/trivy-repo/deb generic main" | sudo tee -a /etc/apt/sources.list.d/trivy.list
-          sudo apt-get update
-          sudo apt-get install trivy -y
+# # Dependency Scanning with OSV Scanner
+# # Step: Install Trivy
+#       - name: Install Trivy
+#         run: |
+#           sudo apt-get install wget gnupg
+#           wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | gpg --dearmor | sudo tee /usr/share/keyrings/trivy.gpg > /dev/null
+#           echo "deb [signed-by=/usr/share/keyrings/trivy.gpg] https://aquasecurity.github.io/trivy-repo/deb generic main" | sudo tee -a /etc/apt/sources.list.d/trivy.list
+#           sudo apt-get update
+#           sudo apt-get install trivy -y
           
-      # Step: Run Trivy Dependency Scan
-      - name: Run Trivy Dependency Scan
-        run: |
-          mkdir -p trivy-reports
-          trivy fs . --scanners vuln --vuln-type library --format json --output trivy-results.json || true
+#       # Step: Run Trivy Dependency Scan
+#       - name: Run Trivy Dependency Scan
+#         run: |
+#           trivy fs . --scanners vuln --vuln-type library --format json --output trivy-results.json || true
 
-      # Step: Upload Trivy Reports
-      - name: Upload Trivy Reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: trivy-reports
-          path:  trivy-results.json
+#       # Step: Upload Trivy Reports
+#       - name: Upload Trivy Reports
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: trivy-reports
+#           path:  trivy-results.json
 
 
 
