--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,14 +39,6 @@ jobs:
           sarif_file: .github/codeql/codeql-results.sarif
           category: 'Codeql_report'
 
-      - name: Upload Lint Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: Codeql_report
-          path: .github/codeql/codeql-results.sarif
-
-
-
 #code-linting
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -73,25 +65,25 @@ jobs:
 
 # # Dependency Scanning with OSV Scanner
 # # Step: Install Trivy
-#       - name: Install Trivy
-#         run: |
-#           sudo apt-get install wget gnupg
-#           wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | gpg --dearmor | sudo tee /usr/share/keyrings/trivy.gpg > /dev/null
-#           echo "deb [signed-by=/usr/share/keyrings/trivy.gpg] https://aquasecurity.github.io/trivy-repo/deb generic main" | sudo tee -a /etc/apt/sources.list.d/trivy.list
-#           sudo apt-get update
-#           sudo apt-get install trivy -y
+      - name: Install Trivy
+        run: |
+          sudo apt-get install wget gnupg
+          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | gpg --dearmor | sudo tee /usr/share/keyrings/trivy.gpg > /dev/null
+          echo "deb [signed-by=/usr/share/keyrings/trivy.gpg] https://aquasecurity.github.io/trivy-repo/deb generic main" | sudo tee -a /etc/apt/sources.list.d/trivy.list
+          sudo apt-get update
+          sudo apt-get install trivy -y
           
-#       # Step: Run Trivy Dependency Scan
-#       - name: Run Trivy Dependency Scan
-#         run: |
-#           trivy fs . --scanners vuln --vuln-type library --format json --output trivy-results.json || true
+      # Step: Run Trivy Dependency Scan
+      - name: Run Trivy Dependency Scan
+        run: |
+          trivy fs . --scanners vuln --vuln-type library --format json --output trivy-results.json || true
 
-#       # Step: Upload Trivy Reports
-#       - name: Upload Trivy Reports
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: trivy-reports
-#           path:  trivy-results.json
+      # Step: Upload Trivy Reports
+      - name: Upload Trivy Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-reports
+          path:  trivy-results.json
 
 
 
