--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,6 +39,12 @@ jobs:
           sarif_file: .github/codeql/codeql-results.sarif
           category: 'Codeql_report'
 
+      - name: Upload CodeQL Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: CodeQL-report
+          path: .github/codeql/codeql-results.sarif
+
 #code-linting
       - name: Set up Node.js
         uses: actions/setup-node@v3
