fix: Correctly set args for Gitleaks action to include verbose output and exit code

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -126,4 +126,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITLEAKS_CONFIG: .gitleaks.toml
-          exit_code: 0
+        with:
+          args: --verbose --exit-code 0
