fix: Update Gitleaks installation to extract from tar.gz and move to /usr/local/bin

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -130,9 +130,11 @@ jobs:
       #     args: --verbose --exit-code 0
       - name: Install Gitleaks
         run: |
-          curl -sSL https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks-linux-amd64 -o gitleaks
+          curl -sSL https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks-linux-amd64.tar.gz -o gitleaks.tar.gz
+          tar -xzf gitleaks.tar.gz
           chmod +x gitleaks
           sudo mv gitleaks /usr/local/bin/gitleaks
+    
       
       - name: Run Gitleaks Secret Scan (with custom config + exit-code 0)
         run: |
