fix: Update Gitleaks installation to download the binary directly and move to /usr/local/bin

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -130,8 +130,7 @@ jobs:
       #     args: --verbose --exit-code 0
       - name: Install Gitleaks
         run: |
-          curl -sSL https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks-linux-amd64.tar.gz -o gitleaks.tar.gz
-          tar -xzf gitleaks.tar.gz
+          curl -sSL https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks-linux-amd64 -o gitleaks
           chmod +x gitleaks
           sudo mv gitleaks /usr/local/bin/gitleaks
     
