--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,7 +13,9 @@ name: "CodeQL Advanced"
 
 on:
   push:
-    branches: [ "main", "security-checks" ]
+    branches:
+      - main
+      - security-checks
   pull_request:
     branches: [ "main" ]
   schedule:
