fix: Update branch list in workflows to include 'develop' for consistency

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -16,8 +16,12 @@ on:
     branches:
       - main
       - security-checks
+      - develop
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+      - security-checks
+      - develop
   schedule:
     - cron: '35 13 * * 5'
 
