--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,10 +5,13 @@ on:
   push:
     branches:
       - main
+      - develop
       - security-checks
   pull_request:
     branches:
       - main
+      - develop
+      - security-checks
 
 jobs:
   sast:
